NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Quote_Document_Count__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Quote_Document_Count__c</fullName>
    <label>Quote Document Count</label>
    <summaryForeignKey>SBQQ__QuoteDocument__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>