NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Quote_ID__c</fullName>
    <description>This will be used to hold the parent quote Id incase of quote/order split.</description>
    <label>Legacy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>