NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_QuotePath__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_QuotePath__c</fullName>
    <description>Container Sales Quote Path which updates based on Quote Status field</description>
    <label>Path</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending PM Approval</fullName>
            </value>
            <value>
                <fullName>Pending CAM Approval</fullName>
            </value>
            <value>
                <fullName>Pending VP Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Order/Pending for Job #</fullName>
            </value>
            <value>
                <fullName>Job # Issued</fullName>
            </value>
            <value>
                <fullName>ASO Released</fullName>
            </value>
            <value>
                <fullName>SO Released</fullName>
            </value>
            <value>
                <fullName>Lost/Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>