NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Reason_for_won_or_lost__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Reason_for_won_or_lost__c</fullName>
    <description>Container Reason for &apos;won or lost&apos; or &apos;no-order&apos;</description>
    <label>Reason for &apos;won&apos; or lost&apos; or &apos; no-order&apos;</label>
    <type>TextArea</type>
</CustomField>