NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_RecordType_for_ASO_Document__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_RecordType_for_ASO_Document__c</fullName>
    <description>This is used in ASO document generation</description>
    <formula>IF( CONTAINER_Product_Type__c =&apos;NT&apos;, &apos;Container&apos;,  IF(CONTAINER_Product_Type__c =&apos;GENSET&apos;, &apos;GENSET&apos;, &apos;&apos;) )</formula>
    <label>RecordType for ASO Document</label>
    <type>Text</type>
</CustomField>