NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Remark__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Remark__c</fullName>
    <label>Remark (If internal order)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>