NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Requested_Ship_Date_Up_Check__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Requested_Ship_Date_Up_Check__c</fullName>
    <label>Requested Ship Date Update Check</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>