NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_RevID__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_RevID__c</fullName>
    <defaultValue>TEXT(0)</defaultValue>
    <label>RevID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>