NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Revision_Date__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Revision_Date__c</fullName>
    <label>Revision Date</label>
    <type>Date</type>
</CustomField>