NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Share_won_of_the_Total_Deal__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Share_won_of_the_Total_Deal__c</fullName>
    <description>Container Share won of the Total Deal</description>
    <label>Share won of the Total Deal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>