NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Shipment_Schedule_Update__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Shipment_Schedule_Update__c</fullName>
    <label>Shipment Schedule Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>