NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Spare_Pasts__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Spare_Pasts__c</fullName>
    <label>Spare Pasts</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>