NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Special_Options_Cost__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Special_Options_Cost__c</fullName>
    <description>Container Special Options Cost</description>
    <label>Special Options Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>