NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Special_Options_Sales__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Special_Options_Sales__c</fullName>
    <label>Special Options Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>