NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Special_Req_Price_Update__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Special_Req_Price_Update__c</fullName>
    <label>Special Requirement Price Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>