NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/Container_Special_Requirement_Comments__c.field-meta.xml
<CustomField>
    <fullName>Container_Special_Requirement_Comments__c</fullName>
    <label>Special Requirement Comments</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>