NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Special_Requirement_Sales__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Special_Requirement_Sales__c</fullName>
    <description>Container Special Requirement Sales</description>
    <label>Special Requirement Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>