NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Standard_Option_Cost__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Standard_Option_Cost__c</fullName>
    <description>Container Standard Option Cost</description>
    <label>Standard Option Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>