NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Status__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Status__c</fullName>
    <description>It will populate here as per the actual status of the quote.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending PM Approval</fullName>
            </value>
            <value>
                <fullName>Pending RSM Acceptance for Special Req</fullName>
            </value>
            <value>
                <fullName>Pending CAM Approval</fullName>
            </value>
            <value>
                <fullName>Pending RSM Acceptance for Prod &amp; Ship Schedule</fullName>
            </value>
            <value>
                <fullName>Pending VP Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Order/Pending for Job #</fullName>
            </value>
            <value>
                <fullName>Job # Issued</fullName>
            </value>
            <value>
                <fullName>ASO Released</fullName>
            </value>
            <value>
                <fullName>SO Released</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
                <label>Lost/Cancelled</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Ordered</fullName>
                <isActive>false</isActive>
                <label>Ordered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>