NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Stock_Inventory__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Stock_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock Inventory</label>
    <referenceTo>CONTAINER_Stock_Inventory__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>