NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Stock_Job__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Stock_Job__c</fullName>
    <label>Stock Job #</label>
    <length>48</length>
    <type>Text</type>
</CustomField>