NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Sum_Requested_Ship_Dates_Qty__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Sum_Requested_Ship_Dates_Qty__c</fullName>
    <label>Sum of Requested Ship Dates Qty</label>
    <summarizedField>Requested_Ship_Dates__c.CONTAINER_Qty__c</summarizedField>
    <summaryForeignKey>Requested_Ship_Dates__c.CONTAINER_Quote_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>