NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Summary_Product_Desc__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Summary_Product_Desc__c</fullName>
    <label>CONTAINER Summary Product Desc</label>
    <length>130768</length>
    <type>Html</type>
</CustomField>