NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Summary_Product_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Summary_Product_Unit_Price__c</fullName>
    <label>CONTAINER Summary Product Unit Price</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>