NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Tentative_Ship_Sc_Update_Check__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Tentative_Ship_Sc_Update_Check__c</fullName>
    <label>Tentative Shipment Schedule Update Check</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>