NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Total_Check_Out__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Total_Check_Out__c</fullName>
    <label>Total Check-Out</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>