NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Total_Contract__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Total_Contract__c</fullName>
    <description>Total Contract price</description>
    <formula>CONTAINER_Cost_Contract_Price__c  *   CONTAINER_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Contract</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>