NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Total_Cost_Contract__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Total_Cost_Contract__c</fullName>
    <label>Total Cost Contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>