NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Total_Extended_Applied_Cost__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Total_Extended_Applied_Cost__c</fullName>
    <label>Total Extended Warranty Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>