NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Total_Freight_Applied_to_Sales__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Total_Freight_Applied_to_Sales__c</fullName>
    <label>Total Freight Applied to Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>