NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Total_List_Net_Sales__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Total_List_Net_Sales__c</fullName>
    <label>Total List Net Sales</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>