NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Total_Net_Sales__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Total_Net_Sales__c</fullName>
    <description>Total net sales of the quote</description>
    <formula>CONTAINER_Net_Sales1__c  * CONTAINER_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Net Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>