NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Total_ORBCOMM_RI_AppliedCost__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Total_ORBCOMM_RI_AppliedCost__c</fullName>
    <label>Total ORBCOMM RI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>