NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Total_Special_Options_Cost__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Total_Special_Options_Cost__c</fullName>
    <description>Total Special Options Cost of the quote</description>
    <label>Total Special Options Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>