NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Total_Standard_Options_List__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Total_Standard_Options_List__c</fullName>
    <description>Total Standard Options List of the quote</description>
    <label>Total Standard Options List</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>