NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Total_Warranty_Cost__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Total_Warranty_Cost__c</fullName>
    <description>Total Warranty Cost of the quote.</description>
    <label>Total Warranty Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>