NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Total_Warranty_List__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Total_Warranty_List__c</fullName>
    <description>Total Warranty List of the quote</description>
    <label>Total Warranty List</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>