NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Total_Weight_Unit_Options_lb__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Total_Weight_Unit_Options_lb__c</fullName>
    <description>Total Weight (Unit + Options) (lb) of the quote.</description>
    <label>Total Weight (Unit + Options) (lb)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>