NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Type__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Type__c</fullName>
    <description>CONTAINER QUOTE TYPES</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End Customer Quote</fullName>
                <default>true</default>
                <label>End Customer Quote</label>
            </value>
            <value>
                <fullName>Stock Quote</fullName>
            </value>
            <value>
                <fullName>Cost PID quote</fullName>
            </value>
            <value>
                <fullName>Planning products spec quotes</fullName>
            </value>
            <value>
                <fullName>Internal Engineering</fullName>
                <label>Internal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>