NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Unit_Base_Price_Sales__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Unit_Base_Price_Sales__c</fullName>
    <label>Unit Base Price Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>