NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Warranty_Part_No_Combination__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Warranty_Part_No_Combination__c</fullName>
    <label>Warranty Part Number Combination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>