NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/Count_Lynx_Fleet_Plan_Lines__c.field-meta.xml
<CustomField>
    <fullName>Count_Lynx_Fleet_Plan_Lines__c</fullName>
    <label>Count Lynx Fleet Plan Lines</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Lynx_Fleet_End_Customer_Status__c</field>
        <operation>equals</operation>
        <value>New Customer</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>