NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/Count_Total_Lynx_Fleet__c.field-meta.xml
<CustomField>
    <fullName>Count_Total_Lynx_Fleet__c</fullName>
    <label>Count Total Lynx Fleet</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Lynx_Fleet_End_Customer_Status__c</field>
        <operation>equals</operation>
        <value>New Customer, Existing Customer</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>