NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CTBR_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Billing_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CTBR Billing Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Ctbr_Account_Address_Junction__c.Type__c</field>
            <operation>equals</operation>
            <value>Billing</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Ctbr_Account_Address_Junction__c</referenceTo>
    <relationshipLabel>Quotes (CTBR Billing Address)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>