NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CTBR_BluEdge_Competitive_Unit_Model__c.field-meta.xml
<CustomField>
    <fullName>CTBR_BluEdge_Competitive_Unit_Model__c</fullName>
    <description>CTBR BluEdge</description>
    <label>CTBR BluEdge Competitive Unit Model</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CTBR_BluEdge_Product_Family__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CTBR_BluEdge_Competitive_Unit_Model</valueSetName>
    </valueSet>
</CustomField>