NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CTBR_BluEdge_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>CTBR_BluEdge_Product_Family__c</fullName>
    <label>CTBR BluEdge Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CTBR_BluEdge_Product_Family</valueSetName>
    </valueSet>
</CustomField>