NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CTBR_BluEdge_Shipment_Method__c.field-meta.xml
<CustomField>
    <fullName>CTBR_BluEdge_Shipment_Method__c</fullName>
    <label>CTBR BluEdge Shipment Method</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CTBR_BluEdge_Product_Family__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CTBR_BluEdge_Shipment_Method</valueSetName>
    </valueSet>
</CustomField>