NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CTBR_Canoas__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Canoas__c</fullName>
    <formula>TEXT(DAY(TODAY())) &amp; &apos; de &apos; &amp; 

CASE(
MONTH(TODAY()),
1, &quot;Janeiro&quot;,
2, &quot;Fevereiro&quot;,
3, &quot;Março&quot;,
4, &quot;Abril&quot;,
5, &quot;Maio&quot;,
6, &quot;Junho&quot;,
7, &quot;Julho&quot;,
8, &quot;Agosto&quot;,
9, &quot;Setembro&quot;,
10, &quot;Outubro&quot;,
11, &quot;Novembro&quot;,
&quot;Dezembro&quot;
)

&amp; &apos; de &apos; &amp; 

TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canoas</label>
    <type>Text</type>
</CustomField>