NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CTBR_CITIMAX_400_12V_LA__c.field-meta.xml
<CustomField>
    <fullName>CTBR_CITIMAX_400_12V_LA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CITIMAX 400 12V LA</label>
    <type>Checkbox</type>
</CustomField>