NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CTBR_CITIMAX_400__c.field-meta.xml
<CustomField>
    <fullName>CTBR_CITIMAX_400__c</fullName>
    <formula>IF(
OR(
CTBR_CITIMAX_400_12V_LA__c = true,
CTBR_CITIMAX_400_24V_LA__c = true),
True,
False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CITIMAX 400</label>
    <type>Checkbox</type>
</CustomField>