NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CTBR_CITIMAX_500_12V_ACOPLADO__c.field-meta.xml
<CustomField>
    <fullName>CTBR_CITIMAX_500_12V_ACOPLADO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CITIMAX 500 12V ACOPLADO</label>
    <type>Checkbox</type>
</CustomField>