NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CTBR_CITIMAX_500__c.field-meta.xml
<CustomField>
    <fullName>CTBR_CITIMAX_500__c</fullName>
    <formula>IF(
OR(
CTBR_CITIMAX_500_12V_AE__c = true,
CTBR_CITIMAX_500_12V_ACOPLADO__c = true,
CTBR_CITIMAX_500_24V_AE__c = true,
CTBR_CITIMAX_500_24V_ACOPLADO__c = true),
True,
False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CITIMAX 500</label>
    <type>Checkbox</type>
</CustomField>