NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CTBR_CITIMAX_600_12V_AE__c.field-meta.xml
<CustomField>
    <fullName>CTBR_CITIMAX_600_12V_AE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CITIMAX 600 12V AE</label>
    <type>Checkbox</type>
</CustomField>