NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CTBR_Condicoes_comerciais__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Condicoes_comerciais__c</fullName>
    <label>Condições comerciais</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A vista ( in cash)</fullName>
            </value>
            <value>
                <fullName>Credito (credit)</fullName>
            </value>
            <value>
                <fullName>Parcelado - com entrada (Installments - with deposit)</fullName>
            </value>
            <value>
                <fullName>Parcelado - sem entrada (Installments - with deposit)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>