NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CTBR_Current_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Current_Month_Year__c</fullName>
    <formula>CASE(
MONTH(TODAY()),
1, &quot;Janeiro&quot;,
2, &quot;Fevereiro&quot;,
3, &quot;Março&quot;,
4, &quot;Abril&quot;,
5, &quot;Maio&quot;,
6, &quot;Junho&quot;,
7, &quot;Julho&quot;,
8, &quot;Agosto&quot;,
9, &quot;Setembro&quot;,
10, &quot;Outubro&quot;,
11, &quot;Novembro&quot;,
&quot;Dezembro&quot;
)
&amp;&apos;/&apos;&amp;
TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month &amp; Year</label>
    <type>Text</type>
</CustomField>