NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CTBR_Dados_de_Aplica_o__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Dados_de_Aplica_o__c</fullName>
    <label>Dados de Aplicação</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>